--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,65 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Social Media Dashboard | Asian Health & Service Center</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Asian Health & Service Center - Social Media Dashboard</h1>
+        <p>Analyzing and improving digital engagement through data-driven insights</p>
+    </header>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/11.3.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/11.3.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/11.3.0/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/11.3.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/11.3.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/11.3.0/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/11.3.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/11.3.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/11.3.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/11.3.0/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <section id="overview">
+        <h2>Project Overview</h2>
+        <p>
+            This project focused on gathering and analyzing insights from the **organization's digital assets**, 
+            including <strong>Google Analytics, Facebook Insights, LinkedIn, Google Maps, and their website</strong>.
+            The goal was to understand visitor trends, demographics, and engagement patterns to make data-driven decisions.
+        </p>
+    </section>
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+    <section id="data-insights">
+        <h2>Key Insights & Analysis</h2>
+        <ul>
+            <li>Tracked <strong>website traffic and user engagement</strong> using Google Analytics.</li>
+            <li>Analyzed **year-over-year growth** of social media presence.</li>
+            <li>Created **pie charts, line graphs, and trend analysis reports** for better visualization.</li>
+            <li>Identified top-performing content and user demographics.</li>
+        </ul>
+        <img src="dashboard_screenshot.png" alt="Social Media Dashboard Screenshot" width="80%">
+    </section>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+    <section id="technology">
+        <h2>Technologies & Platforms Used</h2>
+        <p>As part of the project, I introduced several new technologies to the organization:</p>
+        <ul>
+            <li>**Google Analytics** – Set up tracking and created accounts for real-time insights.</li>
+            <li>**Website Migration** – Moved the old website to a new <strong>WordPress</strong> platform.</li>
+            <li>**Slack for Nonprofits** – Implemented Slack for team communication.</li>
+            <li>**Google Forms Automation** – Designed a facility rental application process.</li>
+        </ul>
+    </section>
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+    <section id="impact">
+        <h2>Impact & Results</h2>
+        <ul>
+            <li>**Increased engagement** on social media and website traffic.</li>
+            <li>More efficient **facility rental process** with Google Forms automation.</li>
+            <li>Strengthened **corporate partnerships** with Nike & Columbia Sportswear.</li>
+        </ul>
+    </section>
+
+    <section id="report">
+        <h2>View the Full Report</h2>
+        <p>For a detailed breakdown of the data and trends, download the full **Social Media Dashboard Report** below:</p>
+        <a href="Social-Media-Report.pdf" class="button">Download Report (PDF)</a>
+    </section>
+
+    <footer>
+        <p>Want a similar dashboard for your organization? <a href="contact.html">Get in touch!</a></p>
+    </footer>
+</body>
 </html>
